--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Operating Specific Junk Files
 #-------------------------
 
+#Diogo's config
+app/Config/App.php
+
 # OS X
 .DS_Store
 .AppleDouble
